[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/Theme.tres" type="Theme" id=1]
[ext_resource path="res://assets/fond_accueil_logo.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/nasalization/nasalization-rg.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/Theme_20.tres" type="Theme" id=4]
[ext_resource path="res://scripts/Main_menu.gd" type="Script" id=5]
[ext_resource path="res://assets/fond_accueil.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 3 )

[node name="Main_menu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1024, 0 )
custom_constants/margin_right = 100
custom_constants/margin_top = 100
custom_constants/margin_left = 100
custom_constants/margin_bottom = 100
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fond" type="Sprite" parent="."]
texture = ExtResource( 6 )
centered = false

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 100.0
margin_top = 100.0
margin_right = 924.0
margin_bottom = 500.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 410.0
margin_bottom = 400.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Titre" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_right = 410.0
margin_bottom = 125.0
custom_fonts/font = SubResource( 1 )
text = "MÃ©nage et
recyclage"

[node name="HSeparator4" type="HSeparator" parent="HBoxContainer/VBoxContainer"]
margin_top = 129.0
margin_right = 410.0
margin_bottom = 133.0

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 137.0
margin_right = 410.0
margin_bottom = 280.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Modes_jeux" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/CenterContainer"]
margin_left = 121.0
margin_top = 15.0
margin_right = 288.0
margin_bottom = 128.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 4 )
custom_constants/separation = 10

[node name="Tutoriel" type="Label" parent="HBoxContainer/VBoxContainer/CenterContainer/Modes_jeux"]
margin_right = 167.0
margin_bottom = 31.0
mouse_filter = 1
mouse_default_cursor_shape = 2
text = "Tutoriel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tuto_button" type="TextureButton" parent="HBoxContainer/VBoxContainer/CenterContainer/Modes_jeux/Tutoriel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arcade" type="Label" parent="HBoxContainer/VBoxContainer/CenterContainer/Modes_jeux"]
margin_top = 41.0
margin_right = 167.0
margin_bottom = 72.0
mouse_filter = 1
mouse_default_cursor_shape = 2
text = "Jeux arcade"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arcade_button" type="TextureButton" parent="HBoxContainer/VBoxContainer/CenterContainer/Modes_jeux/Arcade"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Histoire" type="Label" parent="HBoxContainer/VBoxContainer/CenterContainer/Modes_jeux"]
visible = false
margin_top = 82.0
margin_right = 172.0
margin_bottom = 113.0
mouse_filter = 1
mouse_default_cursor_shape = 2
text = "Jeux histoire"

[node name="Histoire_button" type="TextureButton" parent="HBoxContainer/VBoxContainer/CenterContainer/Modes_jeux/Histoire"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quitter" type="Label" parent="HBoxContainer/VBoxContainer/CenterContainer/Modes_jeux"]
margin_top = 82.0
margin_right = 167.0
margin_bottom = 113.0
mouse_filter = 1
mouse_default_cursor_shape = 2
text = "Quitter"

[node name="Quitter_button" type="TextureButton" parent="HBoxContainer/VBoxContainer/CenterContainer/Modes_jeux/Quitter"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator5" type="HSeparator" parent="HBoxContainer/VBoxContainer"]
margin_top = 284.0
margin_right = 410.0
margin_bottom = 288.0

[node name="Familles" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 292.0
margin_right = 410.0
margin_bottom = 400.0

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/VBoxContainer/Familles"]
margin_right = 410.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/Familles/CenterContainer"]
margin_left = 129.0
margin_right = 280.0
margin_bottom = 20.0
theme = ExtResource( 1 )
text = "Choix des familles"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/Familles"]
margin_top = 24.0
margin_right = 410.0
margin_bottom = 108.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/Familles/HBoxContainer"]
margin_right = 203.0
margin_bottom = 84.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Bouscadilla" type="CheckButton" parent="HBoxContainer/VBoxContainer/Familles/HBoxContainer/VBoxContainer"]
margin_right = 203.0
margin_bottom = 40.0
theme = ExtResource( 1 )
pressed = true
text = "Bouscadilla"

[node name="Pelpel" type="CheckButton" parent="HBoxContainer/VBoxContainer/Familles/HBoxContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 203.0
margin_bottom = 84.0
theme = ExtResource( 1 )
pressed = true
text = "Pelpel"

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/Familles/HBoxContainer"]
margin_left = 207.0
margin_right = 410.0
margin_bottom = 84.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Rourou" type="CheckButton" parent="HBoxContainer/VBoxContainer/Familles/HBoxContainer/VBoxContainer2"]
margin_right = 203.0
margin_bottom = 40.0
theme = ExtResource( 1 )
pressed = true
text = "Rourou"

[node name="Boubou" type="CheckButton" parent="HBoxContainer/VBoxContainer/Familles/HBoxContainer/VBoxContainer2"]
margin_top = 44.0
margin_right = 203.0
margin_bottom = 84.0
theme = ExtResource( 1 )
pressed = true
text = "Boubou"

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer"]
margin_left = 414.0
margin_right = 824.0
margin_bottom = 400.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/CenterContainer"]
margin_left = 36.0
margin_top = 54.0
margin_right = 374.0
margin_bottom = 346.0
size_flags_horizontal = 15
size_flags_vertical = 15
texture = ExtResource( 2 )
stretch_mode = 5
[connection signal="mouse_entered" from="HBoxContainer/VBoxContainer/CenterContainer/Modes_jeux/Tutoriel/Tuto_button" to="." method="_on_Tuto_button_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/VBoxContainer/CenterContainer/Modes_jeux/Tutoriel/Tuto_button" to="." method="_on_Tuto_button_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/CenterContainer/Modes_jeux/Tutoriel/Tuto_button" to="." method="_on_Tuto_button_pressed"]
[connection signal="mouse_entered" from="HBoxContainer/VBoxContainer/CenterContainer/Modes_jeux/Arcade/Arcade_button" to="." method="_on_Arcade_button_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/VBoxContainer/CenterContainer/Modes_jeux/Arcade/Arcade_button" to="." method="_on_Arcade_button_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/CenterContainer/Modes_jeux/Arcade/Arcade_button" to="." method="_on_Arcade_button_pressed"]
[connection signal="mouse_entered" from="HBoxContainer/VBoxContainer/CenterContainer/Modes_jeux/Histoire/Histoire_button" to="." method="_on_Histoire_button_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/VBoxContainer/CenterContainer/Modes_jeux/Histoire/Histoire_button" to="." method="_on_Histoire_button_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/CenterContainer/Modes_jeux/Histoire/Histoire_button" to="." method="_on_Histoire_button_pressed"]
[connection signal="mouse_entered" from="HBoxContainer/VBoxContainer/CenterContainer/Modes_jeux/Quitter/Quitter_button" to="." method="_on_Quitter_button_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/VBoxContainer/CenterContainer/Modes_jeux/Quitter/Quitter_button" to="." method="_on_Quitter_button_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/CenterContainer/Modes_jeux/Quitter/Quitter_button" to="." method="_on_Quitter_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Familles/HBoxContainer/VBoxContainer/Bouscadilla" to="." method="_on_Bouscadilla_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Familles/HBoxContainer/VBoxContainer/Pelpel" to="." method="_on_Pelpel_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Familles/HBoxContainer/VBoxContainer2/Rourou" to="." method="_on_Rourou_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Familles/HBoxContainer/VBoxContainer2/Boubou" to="." method="_on_Boubou_pressed"]
